[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.7.1"]

[tool.poetry]
authors = ["jmd <joshua.m.dean@gmail.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
]
description = "A language server for Bioware's nwscript and more!"
homepage = "https://github.com/jd28/arclight-py"

keywords = [
  "nwscript",
  "Neverwinter Nights",
  "completion",
  "lsp",
  "language-server-protocol",
]
name = "arclight"
readme = "README.md"
repository = "https://github.com/jd28/arclight-py"
version = "0.15.dev0"
include = [
  "arclight/data/2dasource.zip",
]

[tool.poetry.dependencies]
cattrs = ">=23.1.2"
docstring-to-markdown = "0.*"
lsprotocol = ">=2022.0.0a9"
prettytable = "^3.11"
pygls = "^1.2.1"
python = "^3.10"
openpyxl = "^3.1"
rollnw = ">=0.42.dev0"

[tool.poetry.dev-dependencies]
PyHamcrest = "*"
mypy = "*"
nox = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
python-lsp-jsonrpc = "*"
ruff = "*"
toml-sort = "*"

[tool.poetry.scripts]
2dilate = 'arclight.twodilate.main:main'
nwscript-lint = 'arclight.nwscript_lint.main:main'
nwscriptd = 'arclight.nwscriptd.cli:cli'
